# Leptos-rs

./: .gitignore  Cargo.toml  README.md  Trunk.toml  build.rs  index.html  package-lock.json  package.json  tailwind.config.js
src/: api.rs  main.rs
src/views/: admin.rs  error.rs  home.rs  loading.rs  login.rs  login_err.rs  mod.rs  signup.rs  upload.rs
src/views/pages/: aside.rs  error.rs  footer.rs  header.rs  mod.rs
src/views/pages/admin/: aside.rs  error.rs  footer.rs  header.rs  mod.rs
src/views/pages/admin/content/: config.rs  index.rs  mod.rs  signin.rs
src/views/pages/content/: index.rs  mod.rs
src/views/pages/user/: aside.rs  error.rs  footer.rs  header.rs  mod.rs
src/views/pages/user/content/: index.rs  mod.rs
static/scripts/: elements.js  swiper.js
static/styles/: leptonic.scss  tailwind.css
