[package]
name = "Leptos-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
js-sys = "^0.3.62"
gloo-utils = "^0.2.0"
wasm-bindgen = "^0.2.85"
leptos = { version = "^0.4.9", features = ["csr"] }
leptos_router = { version = "^0.4.9", features = ["csr"] }
leptonic = { git = "https://github.com/lpotthast/leptonic" }
serde = { version="1.0.188", features = ["derive"] }
console_error_panic_hook = "^0.1.7"
gloo = "^0.3"
gloo-net = "0.4"
gloo-storage = "0.3"
console_log = "^1"
log = "^0.4"

[dependencies.web-sys]
version = "^0.3.64"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'NodeList',
    'Node',
    'Window',
]

[build-dependencies]
leptonic-theme = { git = "https://github.com/lpotthast/leptonic" }
leptos-tiptap-build = "^0.2.1"