[package]
name = "Leptos-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
js-sys = "0.3.64"
gloo-utils = "0.2.0"
wasm-bindgen = "0.2.87"
leptonic = "0.2.0"
console_error_panic_hook = "0.1.7"
gloo = "0.10.0"
gloo-net = "0.4.0"
gloo-storage = "0.3.0"
console_log = "1.0.0"
log = "0.4.20"

[dependencies.serde]
version="1.0.188"
features = ["derive"]

[dependencies.leptos]
version = "0.4.10"
features = ["csr"]

[dependencies.leptos_router]
version = "0.4.10"
features = ["csr"]

[dependencies.web-sys]
version = "^0.3.64"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'NodeList',
    'Node',
    'Window',
]

[build-dependencies]
leptonic-theme = "0.2.0"
leptos-tiptap-build = "^0.2.3"